change to composerjson

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "keywords": ["whois"],
     "authors": [
         {
-            "name": "arall",
-            "email": "gerard.arall@gmail.com"
+            "name": "Behrouz",
+            "email": "behrooz.abbasy@gmail.com"
         }
     ],
     "minimum-stability": "dev",
