--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "version": "1.0.0",
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
     },
